<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="45dp"
    android:orientation="vertical"
    tools:context="proyecto.ludwingixcayau.modulo2.LoginActivity">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/ingresar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60dp"/>

            <TextView android:text="@string/usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <TextView android:text="@string/contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20dp"/>
        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="CONTINUAR"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="15dp"
            android:id="@+id/crearCuenta"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</RelativeLayout>
