<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="proyecto.ludwingixcayau.modulo2.Perfil">

    <!-- TODO: Update blank fragment layout -->

    <TextView android:gravity="center"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:background="#2196f3"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <TextView android:text="@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <TextView android:text="@string/contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="CERRAR SESION"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="Eliminar Cuenta"
            android:textSize="15dp"
            android:id="@+id/irALogin"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
</FrameLayout>
